--- a/Open/package.json
+++ b/Open/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cloudinary": "^1.8.0",
+    "twilio": "^2.11.1"
+  }
 }
