--- a/Open/package.json
+++ b/Open/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^4.0.0",
     "cloudinary": "^1.8.0",
+    "dotenv": "^4.0.0",
+    "stream-player": "^0.3.0",
     "twilio": "^2.11.1"
   }
 }
